--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,7 @@
 
 <body class="body">
  <!--header-->       
-    <header class="page-header">
+    <header class="page-header container">
         <nav class="page-navigation">
             <a class="logo-link link" href="./index.html">Web<span class="logo-link-accent">Studio</span></a>
             <ul class="menu list">
@@ -44,12 +45,14 @@
     <main>
 <!--hero-->        
         <section class="hero">
+            <div class="container">
             <h1 class="main-title">Effective Solutions
                 for Your Business</h1>
             <button class="modal-open-btn button-hero button" type="button" name="Order Service">Order Service</button>
+            </div>
         </section>
 <!--feauters-->            
-    <section class="feauters">
+    <section class="feauters container">
     <h2 class="hidden-title" hidden>Section header</h2>   
     <ul class="feauters-list list" >
         <li class="feauters-item">
@@ -72,7 +75,7 @@
     </ul>
     </section>
 <!--activity-->    
-    <section class="activity">
+    <section class="activity container">
        <h2 class="activity-title">What are we doing</h2> 
        <ul class="activity-list list" >
         <li class="activity-item ">
@@ -85,7 +88,7 @@
        </ul>   
     </section>
  <!--our team-->   
-    <section class="our-team">
+    <section class="our-team container">
         <h2 class="our-team-main-title">Our Team</h2>
         <ul class="our-team-list list">
             <li class="our-team-item">
@@ -113,8 +116,10 @@
     </main>
  <!--footer-->   
     <footer class="footer">
+        <div class="container">
         <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-accent">Studio</span></a>
         <p class="footer-suptitle">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 </body>
 </html>
