--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,7 @@
 </head>
 <body class="body">
 <!--header-->    
-    <header class="page-header">
+    <header class="page-header container">
         <nav class="page-navigation">
         <a class="logo-link link" href="./index.html">Web<span class="logo-link-accent">Studio</span></a>
             <ul class="menu list">
@@ -43,7 +44,7 @@
     </header>
 <main>
 <!--navigation-->   
-<section class="-navigation-">
+<section class="navigation container">
 <h1 class="hidden-title" hidden>--navigation--</h1>    
     <ul class="navigation-list list">
     <li class="navigation-item">
@@ -63,7 +64,7 @@
     </li>
     </ul>  
 <!--work examples-->
-<ul class="work-examples-list list">
+<ul class="work-examples-list list container">
     <li class="work-examples-item">
         <a class="work-examples-link link" href="">
             <img class="work-examples-img" src="./images/apps/banking-app.jpg" alt="banking-app" width="360" height="300">
@@ -123,9 +124,11 @@
 </main>
 <!--footer-->
 <footer class="footer">
+    <div class="container">
     <a class="logo-footer link" href="./index.html">Web<span class="logo-footer-accent">Studio</span></a>
     <p class="footer-suptitle">Increase the flow of customers and sales for your business with digital marketing &
         growth solutions.</p>
+        </div>
 </footer>
 </body>
 </html>
