--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             </div>
         </section>
 <!--feauters-->            
-    <section class="feauters container">
+    <section class="feauters section">
+        <div class="container">
     <h2 class="hidden-title" hidden>Section header</h2>   
     <ul class="feauters-list list" >
         <li class="feauters-item">
@@ -73,9 +74,11 @@
             <p class="feauters-suptitle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
     </ul>
+    </div>
     </section>
 <!--activity-->    
-    <section class="activity container">
+    <section class="activity section">
+        <div class="container">
        <h2 class="activity-title">What are we doing</h2> 
        <ul class="activity-list list" >
         <li class="activity-item ">
@@ -86,9 +89,11 @@
         <img class="activity-img" src="./images/activity/three.jpg" alt="iphone-in-hand" width="360" height="300">
         </li>
        </ul>   
+    </div>
     </section>
  <!--our team-->   
-    <section class="our-team container">
+    <section class="our-team section">
+        <div class="container">
         <h2 class="our-team-main-title">Our Team</h2>
         <ul class="our-team-list list">
             <li class="our-team-item">
@@ -112,6 +117,7 @@
             <p class="our-team-suptitle">UI Designer</p>
             </li>
         </ul>
+        </div>
     </section>
     </main>
  <!--footer-->   
