--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 <main>
 <!--navigation-->   
 <section class="navigation container">
-<h1 class="hidden-title" hidden>--navigation--</h1>    
+<h1 class="hidden-title visually-hidden" hidden>--navigation--</h1>    
     <ul class="navigation-list list">
     <li class="navigation-item">
         <button class="navigation-button button" type="button" name="All">All</button>
