--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
 <body class="body">
  <!--header-->       
-    <header class="page-header container">
-        <nav class="page-navigation">
+    <header class="page-header">
+        <div class="container">
+            <nav class="page-navigation">
             <a class="logo-link link" href="./index.html">Web<span class="logo-link-accent">Studio</span></a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -41,6 +42,8 @@
             <a class="contact-information link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
+    </div>
+        
     </header>
     <main>
 <!--hero-->        
