--- a/portfolio.html
+++ b/portfolio.html
@@ -16,31 +16,34 @@
 </head>
 <body class="body">
 <!--header-->    
-    <header class="page-header container">
-        <nav class="page-navigation">
-        <a class="logo-link link" href="./index.html">Web<span class="logo-link-accent">Studio</span></a>
-            <ul class="menu list">
-                <li class="menu-item">
-                    <a class="menu-link link" href="./index.html">Studio</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link link" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="contact">
-            <ul class="contact-menu list">
-                <li class="contact-item">
-                    <a class="contact-information link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="contact-item">
-                    <a class="contact-information link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+    <header class="page-header">
+        <div class="container">
+            <nav class="page-navigation">
+                <a class="logo-link link" href="./index.html">Web<span class="logo-link-accent">Studio</span></a>
+                <ul class="menu list">
+                    <li class="menu-item">
+                        <a class="menu-link link" href="./index.html">Studio</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-link link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="contact">
+                <ul class="contact-menu list">
+                    <li class="contact-item">
+                        <a class="contact-information link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="contact-item">
+                        <a class="contact-information link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
+    
     </header>
 <main>
 <!--navigation-->   
