--- a/index.html
+++ b/index.html
@@ -101,23 +101,32 @@
         <ul class="our-team-list list">
             <li class="our-team-item">
                 <img class="our-team-img" src="./images/our-team/mark.jpg" alt="man" width="264" height="260">
-            <h3 class="our-team-title">Mark Guerrero</h3>
+            <div class="our-team-container">
+                <h3 class="our-team-title">Mark Guerrero</h3>
             <p class="our-team-suptitle">Product Designer</p>
+        </div>
+            
             </li>
             <li class="our-team-item">
                 <img class="our-team-img" src="./images/our-team/tom.jpg" alt="man" width="264" height="260">
-            <h3 class="our-team-title">Tom Ford</h3>  
-            <p class="our-team-suptitle">Frontend Developer</p>  
+                <div class="our-team-container">
+                    <h3 class="our-team-title">Tom Ford</h3>  
+            <p class="our-team-suptitle">Frontend Developer</p>
+        </div>
             </li>
             <li class="our-team-item">
                 <img class="our-team-img" src="./images/our-team/camila.jpg" alt="woman" width="264" height="260">
-            <h3 class="our-team-title" >Camila Garcia</h3>  
-            <p class="our-team-suptitle">Marketing</p>  
+                <div class="our-team-container">
+                 <h3 class="our-team-title" >Camila Garcia</h3>  
+            <p class="our-team-suptitle">Marketing</p>     
+                </div>
             </li>
             <li class="our-team-item" >
                 <img class="our-team-img" src="./images/our-team/daniel.jpg" alt="man" width="264" height="260">
-            <h3 class="our-team-title" >Daniel Wilson</h3>    
+                <div class="our-team-container">
+                <h3 class="our-team-title" >Daniel Wilson</h3>    
             <p class="our-team-suptitle">UI Designer</p>
+        </div>
             </li>
         </ul>
         </div>
