--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="body">
  <!--header-->       
     <header class="page-header">
-        <div class="container">
+        <div class="container header-container">
             <nav class="page-navigation">
             <a class="logo-link link" href="./index.html">Web<span class="logo-link-accent">Studio</span></a>
             <ul class="menu list">
