--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
     </header>
 <main>
 <!--navigation-->   
-<section class="navigation container">
+<section class="navigation">
     <div class="container"><h1 class="hidden-title visually-hidden" hidden>--navigation--</h1>    
     <ul class="navigation-list list">
     <li class="navigation-item">
@@ -67,7 +67,7 @@
     </li>
     </ul>  
 <!--work examples-->
-<ul class="work-examples-list list container">
+<ul class="work-examples-list list">
     <li class="work-examples-item">
         <a class="work-examples-link link" href="">
             <img class="work-examples-img" src="./images/apps/banking-app.jpg" alt="banking-app" width="360" height="300">
