--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!--feauters-->            
     <section class="feauters section">
         <div class="container">
-    <h2 class="hidden-title visually-hidden" hidden>Section header</h2>   
+    <h2 class="hidden-title visually-hidden">Section header</h2>   
     <ul class="feauters-list list" >
         <li class="feauters-item">
             <h3 class="feauters-title">Strategy</h3>
