--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
 <main>
 <!--navigation-->   
 <section class="navigation">
-    <div class="container"><h1 class="hidden-title visually-hidden" hidden>--navigation--</h1>    
+    <div class="container"><h1 class="hidden-title visually-hidden">--navigation--</h1>    
     <ul class="navigation-list list">
     <li class="navigation-item">
         <button class="navigation-button button" type="button" name="All">All</button>
